--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title : Homepage
 navbar_title: Home
 ---
-{% include widgets/profile_card.html %}
+{% _include widgets/profile_card.html %}
 
 {% include widgets/url_debug_message.html %}
 
